test/e2e/manifests/hostnetwork-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-hostnet-pod
  namespace: default
spec:
  hostNetwork: true
  containers:
  - name: agnhost
    image: {{.Image}}
    command: ["sleep", "3600"]
    ports:
    - containerPort: 8443
