test/e2e/manifests/non-tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-notls-ingress
  namespace: default
spec:
  rules:
  - host: test-plain.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-https
            port:
              number: 80
